Removed unecessary console logs Fixed issue with "Your cart is empty" appearing in white

--- a/server/public/cart.html
+++ b/server/public/cart.html
@@ -128,7 +128,7 @@
         let totalPrice = 0;
         let itemNumber = 0;
         if (items.length === 0) {
-            cartItemsContainer.innerHTML = "<p>Your cart is empty.</p>";
+            cartItemsContainer.innerHTML = `<p class="cart-item">Your cart is empty.</p>`;
         } else {
             for (const item of items) {
                 const merchandise = await fetchMerchandiseInfo(item.item_id);
