Home page update
Made home page look better

--- a/server/public/home.html
+++ b/server/public/home.html
@@ -32,7 +32,7 @@
             background-color: rgb(221, 220, 220);
             color:  rgb(221, 220, 220);
         }
-
+       
         .body-text {
             color: rgb(0,0,0);
         }
@@ -52,7 +52,11 @@
 
 <div>
     <h1 class="body-text" id="welcomeMessage">Welcome to our Home page!</h1>
-    <p class="body-text">This is just a welcome screen saying hello to guests.</p>
+    <p class="body-text">Take a look at some of our attractions:</p>
+    <img src="https://st.depositphotos.com/1788940/1328/i/380/depositphotos_13285507-stock-photo-rollercoaster-ride.jpg" alt="Roller Coaster"><br>
+    <img src="https://st3.depositphotos.com/17484154/35762/i/450/depositphotos_357625554-stock-photo-low-angle-view-ferris-wheel.jpg" alt="Ferris Wheel"><br>
+    <img src="https://static4.depositphotos.com/1015060/494/i/450/depositphotos_4948576-stock-photo-brightly-illuminated-traditional-carousel-paris.jpg" alt="Carousel"><br>
+    <img src="https://st4.depositphotos.com/1695244/41615/i/450/depositphotos_416154168-stock-photo-scary-old-abandoned-house-bones.jpg" alt="Haunted House"><br>
 </div>
 
 <script>
